fix: primary navigation alignment on IE [#501]

--- a/assets/scss/elements/navigation/_nav-menu.scss
+++ b/assets/scss/elements/navigation/_nav-menu.scss
@@ -65,7 +65,7 @@
 }
 
 .nv-nav-wrap {
-  min-height: 70px;
+  min-height: 1px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
